# spotify_playlist_snapshot

./: .gitignore  README.md  configuration.yaml.example  main.py  pyproject.toml  requirements.txt  spotify-playlist-logger.py  spotify-playlist-snapshot.py  spotify_playlist_snapshot.py  tox.ini
