[project]
name = "spotify_playlist_snapshot"
version = "0.1.3"
description = "A script to fetch all playlists information of a Spotify user and save it to a CSV file."
authors = [
    {name = "Viktor Bekesi",email = "viktor.bekesi@outlook.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "spotipy",
    "pyyaml"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"